[project]
name = "image-gen-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "diffusers==0.32.2",
    "huggingface-hub>=0.35.3",
    "numpy>=2.3.3",
    "packaging>=25.0",
    "peft>=0.17.1",
    "pillow>=11.3.0",
    "safetensors>=0.6.2",
    "torch>=2.8.0",
    "transformers==4.49.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
